--- a/static/styles.css
+++ b/static/styles.css
@@ -1,14 +1,40 @@
-body {
+  body {
   background-color: #699D9D;
-  background-image: url(images\abstract.jpg);
+  background-image: url('images/strct.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  padding-left: 5px;
-  }
+}
 
   h1, h2 {
     color: #FCA205;
     font-family: 'Lobster';
     font-size: 50px;
+}
+
+div.absolute_ragaly {
+  position: absolute;
+  top: 10px;
+  left: 50px;
+  height: 300px;
+  border: 1
+}
+div.absolute1 {
+  position: absolute;
+  top: 550px;
+  left: 0px;
+  height: 300px;
+}
+div.absolute2 {
+  position: absolute;
+  top: 600px;
+  left: 110px;
+  height: 300px;
+  border: 1
+}
+div.absolute3 {
+  position: absolute;
+  top: 700px;
+  left: 220px;
+  height: 300px;
 }
